[workspace]
members = ["my-wrapper", "borrow-api", "take-api"]

[patch.crates-io]
# msp430 = { git = "https://github.com/rust-embedded/msp430", branch = "rt-up" }
msp430-rt = { git = "https://github.com/rust-embedded/msp430-rt", branch = "rt-up" }

[profile.release]
codegen-units = 1
opt-level = "s"
lto = true
