[package]
name = "borrow-api"
version = "0.1.0"
authors = ["William D. Jones <thor0505@comcast.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies.msp430]
version = "0.1.0"

[dependencies.msp430-rt]
version = "0.1.0"

[dependencies.msp430g2553]
features = ["rt"]
version = "0.1.0"

[dependencies.panic-msp430]
version = "0.1.0"
