[package]
name = "take-api"
version = "0.1.0"
authors = ["William D. Jones <thor0505@comcast.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
msp430 = { version = "0.3.1", git = "https://github.com/rust-embedded/msp430", branch = "critical-section", features = ["critical-section-single-core"] } # Version may need to be specified to avoid llvm_asm! issues.
msp430-rt = "0.3.0"
panic-msp430 = "0.3.0"


# [dependencies.msp430-rtfm]
# git = "https://github.com/japaric/msp430-rtfm"

[dependencies.msp430g2553]
features = ["rt"]
version = "0.3.0"

[dev-dependencies]
bare-metal = "1.0.0"
critical = { version = "0.1", path = "../critical" }
critical-section = "1.0.0"
once_cell = { version = "1.7.0", default_features = false}
portable-atomic = "0.3.13"

[[example]]
name = "critical"
required-features = [ "critical/msp430" ]

[features]
unsafe = []
use-bare-metal = []
use-extern-cs = []
